First working version of auth-server
