# authservice/primary/src/main/resources/auth-service-rest-api-spec.yaml
@@ -8,10 +8,12 @@ info:
 paths:
   /accounts/loginInternalAccount:
     post:
-      summary: Login to an internal account with basic auth. Returns access token.
+      description: Login to an internal account with basic auth. Returns an access token with claim "subject-type = account"
       operationId: loginInternalAccount
       tags:
         - Account Login
+      security:
+        - internalAccountBasicAuth: []
       responses:
         '200':
           description: Login to interal Account was successful
@@ -27,8 +29,10 @@ paths:
                 $ref: '#/components/schemas/ThrowableProblem'
   /accounts/loginOIDCAccount:
     post:
-      summary: Login with OIDC via ID-Token as Bearer Token. Creates new account if email does not exist. Returns access token.
+      description: Login with via ID-token provided by OIDC provider (issuer must be supported by auth. server). Creates new account if email does not exist. Returns access token with access token with claim "subject-type = account".
       operationId: loginOIDCAccount
+      security:
+        - oidcIdToken: []
       tags:
         - Account Login
       responses:
@@ -52,7 +56,7 @@ paths:
                 $ref: '#/components/schemas/ThrowableProblem'
   /accounts/registerInternalAccount:
     put:
-      summary: Registers a new internal account with the provided credentials.
+      description: Registers a new internal account with the provided credentials.
       operationId: registerInternalAccount
       tags:
         - Account Management
@@ -106,7 +110,7 @@ paths:
   #          description: User not found for id.
   /accounts/{accountId}:
     delete:
-      description: Deletes the account.
+      description: Deletes the account. {accountId} must match account id in access token
       operationId: deleteAccount
       tags:
         - Account Management
@@ -117,9 +121,11 @@ paths:
           description: User was deleted.
         '404':
           description: User not found for id.
+      security:
+        - accountAccessToken: []
   /clients/create:
     put:
-      summary: Creates a new client.
+      description: Creates a new client.
       operationId: createNewClient
       tags:
         - Client Management
@@ -138,7 +144,7 @@ paths:
                 $ref: '#/components/schemas/ClientCreationResponse'
   /clients/{clientId}/reset-password:
     post:
-      summary: Resets the password to a new random one.
+      description: Resets the password to a new random one. {clientId} must match client id in access token
       operationId: resetPassword
       tags:
         - Client Management
@@ -148,6 +154,8 @@ paths:
           schema:
             type: string
           required: true
+      security:
+        - clientAccessToken: []
       responses:
         '200':
           description: Password was successfully reset.
@@ -157,10 +165,13 @@ paths:
                 $ref: '#/components/schemas/ClientCreationResponse'
   /token-introspection:
     get:
-      summary: Get the account or client data from the provided access token.
+      description: Get detailed account or client data from the provided access token.
       operationId: tokenIntrospection
       tags:
         - Auth Endpoints
+      security:
+        - accountAccessToken: []
+        - clientAccessToken: []
       responses:
         '200':
           description: Token is valid and user data could be retrieved.
@@ -312,3 +323,23 @@ components:
           type: array
           items:
             type: string
+  securitySchemes:
+    accountAccessToken:
+      type: http
+      description: Access token issued by this auth. server at /accounts/loginInternalAccount or /accounts/loginOIDCAccount. Used by external frontend for accessing microservice endpoints. Identified by claim "subject-type = account"
+      scheme: bearer
+      bearerFormat: JWT
+    clientAccessToken:
+      type: http
+      description: Enriched access token issued by this auth. server using the client_credentials OAuth2 flow. Used by internal microservices (clients) for accessing other microservice endpoints. Identified by claim "subject-type = client"
+      scheme: bearer
+      bearerFormat: JWT
+    internalAccountBasicAuth:
+      type: http
+      description: Basic Auhtentication used to login into an internal account. Will be exchanged into access token with claim "subject-type = account"
+      scheme: basic
+    oidcIdToken:
+      type: http
+      description: Identity token provided by an OIDC provider which must be supported by this authentication server. Will be exchanged into access token with claim "subject-type = account"
+      scheme: bearer
+      bearerFormat: JWT
